# yeetnyoink

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION.md  README.md  apps_topology.md  background.js  build-xpi.sh  config.example.toml  flake.nix  install-native-host.sh  manifest.json  rdg.md  rectangularly dualizable graph vs binary space par.md  summary.md
.github/workflows/: docs-pages.yml  release-zellij-plugin.yml
crates/macos_window_manager/: Cargo.toml  build.rs
docs/plans/: 2026-03-02-rewrite-cross-domain-pane-architecture.md  2026-03-14-window-manager-isolation-design.md  2026-03-14-window-manager-isolation-implementation.md  2026-03-15-engine-layer-refactor-design.md  2026-03-15-engine-simplification.md  2026-03-21-hyprland-wm-design.md  2026-03-21-hyprland-wm.md  2026-03-21-macos-native-design.md  2026-03-21-macos-native-implementation.md  2026-03-25-floating-focus-strategy-design.md  2026-03-25-floating-focus-strategy-implementation.md  2026-03-25-wm-floating-focus-contract-design.md  2026-03-25-wm-floating-focus-contract-implementation.md  2026-03-27-macos-native-facade-boundary-design.md  2026-03-27-macos-native-facade-boundary.md  2026-03-27-macos-native-future-crate-boundary-design.md  2026-03-27-macos-native-future-crate-boundary.md  2026-03-28-macos-window-manager-crate-extraction-design.md  2026-03-28-macos-window-manager-crate-extraction.md  2026-03-29-macos-test-support-removal.md  2026-03-29-macos-window-manager-refactor-design.md  2026-03-29-macos-window-manager-refactor.md
native-host/: com.yeet_and_yoink.firefox_bridge.json.template
plugins/chromium-bridge/: manifest.json  service_worker.js
plugins/firefox-bridge/: efa831211914459ea8c9-0.1.0.xpi  manifest.json
plugins/wezterm-bridge/: yny-bridge.lua
plugins/zellij-bridge/: Cargo.toml
scripts/: docs-manifest.mjs  run-compliance.sh
site/: 404.html  browser.html  build-docs.py  editor.html  index.html  terminal.html
site/assets/: docs-catalog.mjs  site.css  site.js
site/remotion/: package.json
src/: config.rs  lib.rs  logging.rs  main.rs  profiling.rs
src/adapters/: README.md  mod.rs
src/commands/: browser_host.rs  focus.rs  focus_or_cycle.rs  mod.rs  move_win.rs  resize.rs  setup.rs  warm_helper.rs
src/engine/: app_policy.rs  browser_native.rs  chain_resolver.rs  contract.rs  direction.rs  domain.rs  domain_plugins.rs  kitty_setup.rs  mod.rs  orchestrator.rs  pane_state.rs  runtime.rs  test_support.rs  topology.rs  transfer.rs  window_manager.rs  zellij_setup.rs
tests/: cross_domain_orchestrator.rs  emacs_e2e.rs  hyprland_activewindow_parsing.rs
(+123 files in other folders)
