[package]
name = "yeetnyoink"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/macos_window_manager"]

[[bin]]
name = "yny"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
toml = "1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-chrome = "0.7"
tracing-flame = "0.2"
etcetera = "0.8"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
inferno = "0.11"

[dev-dependencies]
niri-ipc = "=25.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
niri-ipc = "=25.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
macos_window_manager = { path = "crates/macos_window_manager" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
